--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "luxon": "^3.5.0",
     "node-fetch": "^3.3.2",
     "ws": "^8.17.0"
   }
